# AutonomousGrasping

./: README.md
dump1/ur5_gpd_moveit_config/config/: ur5_camera.srdf
pcd files/: 73546000.pcd
raw/foo/: grasps.csv
ur5_gpd/: CMakeLists.txt  package.xml
ur5_gpd/launch/: ur5_gazebo.launch
ur5_gpd/rviz/: pointCloud.rviz
ur5_gpd/urdf/: ur5_camera.urdf.xacro
ur5_gpd/urdf/camera/: camera.urdf.xacro  camera_macro.urdf.xacro
